@@ -39,21 +39,6 @@ support in various web browsers. It only takes a few seconds.
 <li>Return to the page that required JavaScript, and then click the reload button or press the <b>F5</b> key to reload the page.</li>
 </ol>
 
-<b>Internet Explorer 6</b>
-
-<ol>
-<li>Click <b>Tools</b> on the menu at the top of your browser window.</li>
-<li>Click <b>Internet Options</b>.</li>
-<li>Click the <b>Security</b> tab.</li>
-<li>Click the <b>Custom Level...</b> button.</li>
-<li>Scroll down to the <b>Scripting</b> section.</li>
-<li>Under the <b>Active scripting</b> heading, click <b>Enable</b>.</li>
-<li>Click the <b>OK</b> button.</li>
-<li>If you're prompted to confirm, click the <b>Yes</b> button.</li>
-<li>Click the <b>OK</b> button.</li>
-<li>Return to the page that required JavaScript, and then click the refresh button or press the <b>F5</b> key to reload the page.</li>
-</ol>
-
 <b>Internet Explorer 7</b>
 
 <ol>
