@@ -6,10 +6,10 @@ so not all browsers will work for editing your wiki. Supported browsers include:
 </p>
 
 <ul>
-<li>Internet Explorer 6+</li>
-<li>Firefox 1.5+</li>
-<li>Chrome (beta Luminotes support)</li>
-<li>Safari 3+ (beta Luminotes support)</li>
+<li>Internet Explorer 7+</li>
+<li>Firefox 2+</li>
+<li>Chrome 1+</li>
+<li>Safari 3+</li>
 </ul>
 
 <p>
